<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".application.EvaluateActivity">

    <TextView
        android:id="@+id/commentary_desc_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        android:text="@string/commentary_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_view" />

    <EditText
        android:id="@+id/commentary_edittext"
        android:layout_width="343dp"
        android:layout_height="127dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLength="250"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_view"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="172dp"
        android:layout_height="86dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.956">
        <!-- Main content -->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center|start"
            android:layout_margin="16dp"
            android:contentDescription="@string/save_content_desc"
            android:onClick="saveClicked"
            app:backgroundTint="@color/green"
            app:srcCompat="@drawable/checkmark" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/delete_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center|right"
            android:layout_margin="16dp"
            android:contentDescription="@string/delete_content_desc"
            android:onClick="deleteClicked"
            app:backgroundTint="@color/red"
            app:srcCompat="@drawable/delete" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/buttons_desc_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="8dp"
        android:text="@string/save_desc_view"
        app:layout_constraintBottom_toTopOf="@+id/coordinatorLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/name_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_placeholder"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/trafficlight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/trafficlight_desc_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="84dp"
            android:layout_marginTop="71dp"
            android:text="@string/trafficlight_desc"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/red_button"
            android:layout_width="86dp"
            android:layout_height="95dp"
            android:layout_marginStart="23dp"
            android:layout_marginTop="43dp"
            android:background="@android:color/transparent"
            android:onClick="colorClicked"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/trafficlight_desc_view"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/yellow_button"
            android:layout_width="86dp"
            android:layout_height="95dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="43dp"
            android:background="@android:color/transparent"
            android:onClick="colorClicked"
            app:layout_constraintStart_toEndOf="@+id/red_button"
            app:layout_constraintTop_toBottomOf="@+id/trafficlight_desc_view"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/green_button"
            android:layout_width="86dp"
            android:layout_height="95dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="43dp"
            android:background="@android:color/transparent"
            android:onClick="colorClicked"
            app:layout_constraintStart_toEndOf="@+id/yellow_button"
            app:layout_constraintTop_toBottomOf="@+id/trafficlight_desc_view"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/color_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="122dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="123dp"
            android:text="@string/no_color"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yellow_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>